--- a/package.json
+++ b/package.json
@@ -1,4 +1,57 @@
 {
-  "name": "ne-country-sim",
-  "packageManager": "yarn@3.3.0"
+	"name": "ne-country-sim",
+	"version": "0.0.0",
+	"license": "MIT",
+	"bin": "dist/cli.js",
+	"engines": {
+		"node": ">=10"
+	},
+	"scripts": {
+		"build": "tsc && chmod +x dist/cli.js",
+		"start": "npm run build && dist/cli.js",
+		"pretest": "npm run build",
+		"test": "ava",
+	  	"lint": "eslint . --ext .ts,.tsx"
+	},
+	"files": [
+		"dist/cli.js"
+	],
+	"dependencies": {
+		"eslint-config-berry": "^0.15.5",
+		"ink": "^3.2.0",
+		"meow": "^9.0.0",
+		"react": "^17.0.2"
+	},
+	"ava": {
+		"typescript": {
+			"extensions": [
+				"tsx"
+			],
+			"rewritePaths": {
+				"source/": "dist/"
+			}
+		}
+	},
+	"xo": {
+		"extends": "xo-react",
+		"rules": {
+			"react/prop-types": "off"
+		}
+	},
+	"devDependencies": {
+		"@ava/typescript": "^3.0.1",
+		"@sindresorhus/tsconfig": "^3.0.1",
+		"@types/react": "^18.0.28",
+		"@typescript-eslint/eslint-plugin": "^5.52.0",
+		"@typescript-eslint/parser": "^5.52.0",
+		"ava": "^5.2.0",
+		"chalk": "^4.1.2",
+		"eslint": "^8.34.0",
+		"eslint-config-xo-react": "^0.27.0",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"ink-testing-library": "^2.1.0",
+		"typescript": "^4.9.5",
+		"xo": "^0.39.1"
+	}
 }
