--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
 		"start": "npm run build && dist/cli.js",
 		"pretest": "npm run build",
 		"test": "ava",
-	  	"lint": "eslint . --ext .ts,.tsx"
+		"lint": "eslint . --ext .ts,.tsx",
+		"exe": "pkg dist/cli.js --target node16-linux-x64,node16-macos-x64,node16-win-x64 --output dist/ne-country-sim"
 	},
 	"files": [
 		"dist/cli.js"
 	],
 	"dependencies": {
+		"esbuild": "^0.17.8",
 		"eslint-config-berry": "^0.15.5",
 		"ink": "^3.2.0",
 		"meow": "^9.0.0",
+		"pkg": "^5.8.0",
 		"react": "^17.0.2"
 	},
 	"ava": {
